--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-query": "^3.39.2",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1"
   }
 }
