--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "axios": "^1.2.4",
+    "axios": "^1.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "json-server": "^0.17.1",
@@ -23,7 +24,8 @@
     "react-hook-form": "^7.43.1",
     "react-query": "^3.39.2",
     "sass": "^1.57.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1"
