--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "next-app",
-  "version": "0.1.0",
-  "private": true,
-  "config": {
-    "port": 8000
-  },
-  "scripts": {
-    "dev": "next dev",
-    "server": "json-server --watch db.json --port %npm_package_config_port%",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
-    "@next/font": "13.1.5",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "axios": "^1.3.2",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "firebase": "^9.17.1",
-    "json-server": "^0.17.1",
-    "next": "13.1.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.1",
-    "react-query": "^3.39.2",
-    "sass": "^1.57.1",
-    "typescript": "4.9.4",
-    "yup": "^1.0.0"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^6.5.1"
-  }
+	"name": "next-app",
+	"version": "0.1.0",
+	"private": true,
+	"config": {
+		"port": 8000
+	},
+	"scripts": {
+		"server": "json-server --watch src/data/db.json --port %npm_package_config_port%",
+		"dev": "concurrently \"next dev\" \"npm run server\"",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^2.9.11",
+		"@next/font": "13.1.5",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.27",
+		"@types/react-dom": "18.0.10",
+		"axios": "^1.3.2",
+		"concurrently": "^7.6.0",
+		"eslint": "8.32.0",
+		"eslint-config-next": "13.1.5",
+		"firebase": "^9.17.1",
+		"json-server": "^0.17.1",
+		"next": "13.1.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.43.1",
+		"react-query": "^3.39.2",
+		"sass": "^1.57.1",
+		"typescript": "4.9.4",
+		"yup": "^1.0.0"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^6.5.1"
+	}
 }
